[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio==3.4.3",
    "fastapi==0.111.0",
    "langchain==0.2.1",
    "langchain-openai==0.1.7",
    "langchain-community==0.2.1",
    "langchainhub==0.1.15",
    "neo4j==5.20.0",
    "numpy==1.26.4",
    "openai==1.30.1",
    "opentelemetry-api==1.24.0",
    "pydantic==2.7.1",
    "uvicorn==0.29.0",
    "httpx==0.25.2"
]

[project.optional-dependencies]
dev = ["black", "flake8"]